tweaks for daily entries

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,6 +1,6 @@
 de:
   occured_at: "Tageszeit des Schmerzvorfalls"
-  not_today: "nicht heute?"
+  not_today: "nicht für heute eintragen?"
   what_date: "Welches Datum?"
   body_part: "Wo tat es weh?"
   side: "Auf welcher Seite?"
