better day fields

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,7 +15,7 @@ de:
   weight: "Gewicht"
   today: "heute"
   current_week: "aktuelle Woche"
-  pain_degree: "allg. Schmerzgrad"
+  pain_degree: "Schmerzgrad"
   emotion_degree: "Stimmung"
   menstruation: "Menstruation"
   date:
