--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -18,6 +18,7 @@ de:
   pain_degree: "Schmerzgrad"
   emotion_degree: "Stimmung"
   menstruation: "Menstruation"
+  sleep: "Schlafdauer"
   date:
     abbr_day_names:
     - So
